<resources>

    <string name="app_name">naviIT</string>
	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">Close drawer</string>
	<string name="action_login">Login</string>
	<string-array name="block">
        <item>Block A</item>
        <item>Block B</item>       
   </string-array>
   <string-array name="level">
        <item>Ground Floor</item>
        <item>First Floor</item>  
        <item>Second Floor</item>     
   </string-array>
    
    <!-- Pedometer String -->
    <!-- Settings -->
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>
   	
    <!-- End of Pedometer String -->
    
	
	<!-- Sinyee's String -->
	<!-- Current Location -->
    <!-- Fragment main -->
    <string name="curr">Current Location</string>
    
    <!-- QR Code Generator -->
    <!-- Fragment_Second -->
    <string name="editData">Enter data for QR Code at here</string>
    <string name="btnGenerate">Generate QR Code</string>
    <string name="qrCode">QR Code</string>
    <string name="btnSaveQRCode">Save</string>
    <string name="btnEmailQRCode">Email</string>
    <string name="btnSaveQRDb">Save QR Code to Database</string>
    
    <!-- QR Code Scanner -->
    <!-- Fragment_third -->
    <string name="btnScanner">Scan QR Code</string>
    <string name="btnShowInfo">Show info</string>
    
    <!-- Semantic Information -->
    <!-- Fragment_forth -->
    <string name="background">Background</string>
    
    <!-- Collect fingerprints -->
    <!-- Fragment fifth -->
    
    <!-- Activity_Dialog -->
    <string name="editLocationId">Select one location id</string>
    <string name="btnStartScanning">Start Scanning</string>
    
    <!-- Check_Block_Dialog -->
    <string name="checkA">Block A</string>
    <string name="checkB">Block B</string>
    
    <!-- Fragment_Eighth -->
    <string name="labelLName">Name of the location: </string>
    <string name="labelLDesc">Description: </string>
    <string name="labelLImage">Image of the location: </string>
    <string name="btnSaveLInfo">Save</string>
    
    <!-- Choose block location -->
    <string name="labelBlockName">Available location: </string>
    <string name="btnConfirmLocation">Ok</string>
    
    <!-- enter_email_address -->
    <string name="editEmailAddress">Recepient\'s email address</string>
    <string name="btnConfirmEmail">Ok</string>
    
    <!-- RFMain Activity -->
    <string name="test">Test</string>
    <string name="count">Count: 0</string>
    <string name="btnSaveSQ">Save in SQLite</string>
    <string name="btnShowList">Show List</string>
    <string name="btnExcel">Write to Excel</string>
    <!--  End of sinyee's string -->
    
    
    
</resources>
