<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/steps_settings_title" >
        <ListPreference
            android:defaultValue="30"
            android:dialogTitle="@string/sensitivity_setting_title"
            android:entries="@array/sensitivity_preference"
            android:entryValues="@array/sensitivity_preference_values"
            android:key="sensitivity"
            android:summary="@string/sensitivity_setting_details"
            android:title="@string/sensitivity_setting" />
        <ListPreference
            android:defaultValue="30"
            android:dialogTitle="@string/operation_level_setting_title"
            android:entries="@array/operation_level_preference"
            android:entryValues="@array/operation_level_preference_values"
            android:key="operation_level"
            android:summary="@string/operation_level_setting_details"
            android:title="@string/operation_level_setting" />
        <ListPreference
            android:defaultValue="imperial"
            android:dialogTitle="@string/units_setting_title"
            android:entries="@array/units_preference"
            android:entryValues="@array/units_preference_values"
            android:key="units"
            android:summary="@string/units_setting_details"
            android:title="@string/units_setting" />

        <name.bagi.levente.pedometer.preferences.StepLengthPreference
            android:defaultValue="20"
            android:dialogTitle="@string/step_length_setting_title"
            android:key="step_length"
            android:summary="@string/step_length_setting_details"
            android:title="@string/step_length_setting" />

        <name.bagi.levente.pedometer.preferences.BodyWeightPreference
            android:defaultValue="50"
            android:dialogTitle="@string/body_weight_setting_title"
            android:key="body_weight"
            android:summary="@string/body_weight_setting_details"
            android:title="@string/body_weight_setting" />

        <ListPreference
            android:defaultValue="running"
            android:dialogTitle="@string/exercise_type_setting_title"
            android:entries="@array/exercise_type_preference"
            android:entryValues="@array/exercise_type_preference_values"
            android:key="exercise_type"
            android:summary="@string/exercise_type_setting_details"
            android:title="@string/exercise_type_setting" />
        <ListPreference
            android:defaultValue="none"
            android:dialogTitle="@string/maintain_setting_title"
            android:entries="@array/maintain_preference"
            android:entryValues="@array/maintain_preference_values"
            android:key="maintain"
            android:summary="@string/maintain_setting_details"
            android:title="@string/maintain_setting" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/voice_settings_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="speak"
            android:summary="@string/voice_setting_details"
            android:title="@string/voice_setting" />

        <ListPreference
            android:defaultValue="1"
            android:dependency="speak"
            android:entries="@array/speaking_interval_preference"
            android:entryValues="@array/speaking_interval_preference_values"
            android:key="speaking_interval"
            android:summary="@string/speaking_interval_setting_details"
            android:title="@string/speaking_interval_setting" />

        <PreferenceScreen
            android:dependency="speak"
            android:key="tell_what"
            android:title="@string/tell_what" >
            <PreferenceCategory android:title="@string/tell_what" >
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="tell_steps"
                    android:summary="@string/tell_steps_setting_details"
                    android:title="@string/tell_steps_setting" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="tell_pace"
                    android:summary="@string/tell_pace_setting_details"
                    android:title="@string/tell_pace_setting" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="tell_distance"
                    android:summary="@string/tell_distance_setting_details"
                    android:title="@string/tell_distance_setting" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="tell_speed"
                    android:summary="@string/tell_speed_setting_details"
                    android:title="@string/tell_speed_setting" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="tell_calories"
                    android:summary="@string/tell_calories_setting_details"
                    android:title="@string/tell_calories_setting" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="tell_fasterslower"
                    android:summary="@string/tell_fasterslower_setting_details"
                    android:title="@string/tell_fasterslower_setting" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>